--- a/src/stylesheet/Style.css
+++ b/src/stylesheet/Style.css
@@ -16,3 +16,9 @@
     filter: brightness(90%)  !important ;
     border-bottom: 2px solid #0dcaf0;
 }
+
+.filter-button{
+    padding: 1rem;
+    min-width:5rem;
+}
+
